# embedded-framework

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: ModuleCoverage.cmake
src/: CMakeLists.txt  Event.cpp  Event.h  Framework.h  State.cpp  State.h  StateInterface.cpp  StateInterface.h  StateMachine.cpp  StateMachine.h  Timer.cpp  Timer.h  Transition.cpp  Transition.h
src/framework/: CMakeLists.txt  Framework.cpp
src/state/: State.cpp  State.h  Timer.cpp
test/: CMakeLists.txt  Framework.cpp  StateMachineTest.cpp  SubStateMachineTest.cpp  TimerTest.cpp  TransitionTest.cpp
